# tsml-eval

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  Execution Commands.txt  LICENSE  MANIFEST.in  README.md  classification_experiment.sh  clustering_experiments.sh  conftest.py  do_forecasting_stuff.bat  ensemble_forecasters.py  lumache.py  pre-commit  process_results.py  pyproject.toml  requirements.txt  root.py  sweep.yaml
.binder/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_improvement.yml  feature_request.yml  other_issue.yml  sweep.yml
.github/utilities/: _commons.py  codespell_ignore_words.txt  issue_assign.py  pr_open_commenter.py  pr_welcome_edited.py  pr_welcome_updater.py  run_examples.sh  uncheck_welcome_boxes.py
.github/workflows/: cancel.yml  examples.yml  issue_comment_edited.yml  issue_comment_posted.yml  monthly_github_maintenace.yml  monthly_github_maintenance.yml  periodic_github_maintenace.yml  periodic_tests.yml  pr_examples.yml  pr_label_edited.yml  pr_opened.yml  pr_pre_commit.yml  pr_precommit.yml  pr_pytest.yml  pr_typecheck.yml  pre_commit.yml  precommit_autoupdate.yml  release.yml  scorecard.yml  tests.yml  weekly_github_maintenace.yml  weekly_github_maintenance.yml
_build_tools/: run_examples.sh
_tsml_group_experiments/soton/: clustering_experiments.sh  workflow_example.md
_tsml_research_resources/: README.md
_tsml_research_resources/dataset_lists/: Multivariate133Classification-Multiverse.txt  Multivariate133Classification-MultiverseClean.txt  Multivariate26Datasets.txt  MultivariateClassification30Datasets-UEA2018.txt  MultivariateClassification66-MultiverseMini.txt  Regression63-MonashExtendedClean.txt  Univariate85Datasets.txt  UnivariateClassification128-UCR2018.txt  UnivariateClassification142-Bakeoff2024.txt  UnivariateClassification30-Bakeoff2024.txt  UnivariateClassification85-UCR2015.txt  todo-Regression19Datasets-MonashClean.txt
_tsml_research_resources/soton/: config.example  m4_dataset.txt  seasonal_periods.windowed_series.txt
_uea_experiments/: MultivariateClassifiers.txt  README.md  README.txt  UnivariateClassifiers.txt
_uea_experiments/ada/: ada_python.md  classification_experiment.sh  classification_experiments.sh  clustering_experiments.sh  distance_clustering_experiments.sh  gpu_classification_experiment.sh  gpu_classification_experiments.sh  gpu_clustering_experiment.sh  gpu_clustering_experiments.sh  gpu_regression_experimens.sh  gpu_regression_experiment.sh  gpu_regression_experiments.sh  regression_experiment.sh  regression_experiments.sh
_uea_experiments/cmp_hardware/: cpu_machine.md  gpu_machine.md
_uea_experiments/dataset_lists/: Regression63Datasets.txt  Regression66Datasets.txt
_uea_experiments/uco/: task_gpu_regression.sub
ada_uea_experiments/: classification_experiment.sh  clustering_experiments.sh  distance_clustering_experiments.sh  gpu_classification_experiment.sh  gpu_regression_experiment.sh  regression_experiment.sh
build_tools/: comment_pr_labeler.py  pr_labeler.py  pr_open_commenter.py  pr_welcome_edited.py  run_examples.sh
docs/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  papers.md  papers.rst  publications  publications.md  publications.rst  publications~1efd1b46581f1f781e9218ed178c1b6387e04128  user_guide.md  user_guide.rst
docs/examples/: classification_experiments.ipynb  clustering_experiments.ipynb  datasets.ipynb  evaluation.ipynb  images  regression_experiments.ipynb  results_format.ipynb
docs/notebooks/: classification_experiments.ipynb  clustering_experiments.ipynb  datasets.ipynb  evaluation.ipynb  regression_experiments.ipynb  results_format.ipynb
docs/papers/: bakeoff_redux.rst
docs/source/: api.rst  conf.py  usage.rst
estimator-evaluation/: results_by_classifier.py
estimator-evaluation/evaluation/: _bulit_in_evaluation.py  _result_evaluation.py  _utils.py
estimator-evaluation/experiments/: classification_examples.py  classification_experiments.py  clustering_experiments.py
estimator-evaluation/utils/: read_results.py
estimator_evaluation/: debug.py  results_by_classifier.py
estimator_evaluation/evaluation/: __init__.py  _bulit_in_evaluation.py  _result_evaluation.py  _utils.py
estimator_evaluation/experiments/: classification_examples.py  clustering_experiments.py  set_classifier.py
estimator_evaluation/tests/: test_results_by_classifier.py
estimator_evaluation/utils/: format_dataset.py  read_results.py
examples/: classification_experiments.ipynb  clustering_experiments.ipynb  datasets.ipynb  evaluation.ipynb  forecasting_experiments.ipynb  regression_experiments.ipynb  results_format.ipynb
experiments/: Multivariate.txt  MultivariateClassifiers.txt  UnivariateClassifiers.txt  classification_experiment.sh  classification_multivariate.sh  classification_univariate.sh  clustering_experiments.sh  gpu_classification_experiment.sh  gpu_regression_experiment.sh  regression_experiment.sh
notebooks/: classification_experiments.ipynb  clustering_experiments.ipynb  datasets.ipynb  diagrams.ipynb  evaluation.ipynb  evaluation_metric_results.ipynb  evaluation_raw_results.ipynb  regression_experiments.ipynb  results_format.ipynb
notebooks/_wip/: diagrams.ipynb  evaluation_metric_results.ipynb  evaluation_raw_results.ipynb
notebooks/example_data/: ACC.csv  testResample0.csv
results/: README.md
results/classification/: MultivariateDefaultTrainTest.csv  NamingConventions
results/regression/: 1NN-ED_rmse.csv  5NN-DTW_RMSE.csv  CNN_RMSE.csv  DrCIF_RMSE.csv  FPCR-Bs_RMSE.csv  FPCR_rmse.csv  FreshPRINCE_RMSE.csv  Grid-SVR_RMSE.csv  RDST_RMSE.csv  RIST_RMSE.csv  ROCKET_RMSE.csv  RandF_rmse.csv  ResNet_RMSE.csv  Ridge_rmse.csv  SingleInception_rmse.csv  XGBoost_RMSE.csv  XGBoost_rmse.csv
sktime_estimator_evaluation/: debug.py  results_by_classifier.py
tsml_estimator_evaluation/: __init__.py  debug.py
tsml_eval/: __init__.py  test_retry.py
(+2365 files in other folders)
