[build-system]
requires = ["setuptools>=61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "tsml-eval"
version = "0.2.0"
description = "A package for benchmarking time series machine learning tools."
authors = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
    {name = "Tony Bagnall", email = "a.j.bagnall@soton.ac.uk"},
]
maintainers = [
    {name = "Matthew Middlehurst", email = "m.b.middlehurst@soton.ac.uk"},
    {name = "Tony Bagnall", email = "a.j.bagnall@soton.ac.uk"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "time-series",
    "time-series-classification",
    "time-series-regression",
    "time-series-clustering",
    "evaluation",
    "benchmarking",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "aeon>=0.6.0,<0.7.0",
    "scikit-learn>=1.0.2,<=1.3.2",
    "tsml>=0.2.1,<0.3.0",
    "matplotlib",
    "gpustat",
    "psutil",
]

[project.optional-dependencies]
all_extras = [
    "aeon[all_extras,dl]",
    "tsml[extras]",
    "xgboost",
    "torch>=1.13.1",
]
unstable_extras = [
    "aeon[unstable_extras]",
    "tsml[unstable_extras]",
    # temp
    "pycatch22<=0.4.3",
]
deep_learning = [
    "aeon[dl]",
    "torch>=1.13.1",
    # temp
    "pycatch22<=0.4.3",
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-cov",
]
binder = [
    "notebook",
    "jupyterlab",
]
docs = [
    "sphinx<8.0.0",
    "sphinx-design",
    "sphinx-version-warning",
    "sphinx_issues",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinxext-opengraph",
    "nbsphinx",
    "numpydoc",
    "myst-parser",
    "jupyter",
    "furo",
]

[project.urls]
homepage = "https://www.timeseriesclassification.com/"
repository = "https://github.com/time-series-machine-learning/tsml-eval/"

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
include = ["tsml_eval"]

[tool.check-manifest]
ignore = [
    # Ignore virtual environments in local builds
    "venv/**",
    # Ignore local files
    "local/**",
    # Ignore the publications symlinks and its contents
    "tsml_eval/publications/2023",
    "tsml_eval/publications/2023/**",
    # Ignore the docs symlinks and its contents
    "docs/examples",
    "docs/examples/**",
    "docs/publications",
    "docs/publications/**",
]

[tool.flake8]
exclude = [
    "tsml_eval/_wip/*",
]
per-file-ignores = [
    "tsml_eval/experiments/classification_experiments.py:E402,T201",
    "tsml_eval/experiments/threaded_classification_experiments.py:T201",
    "tsml_eval/experiments/regression_experiments.py:E402,T201",
    "tsml_eval/experiments/threaded_regression_experiments.py:T201",
    "tsml_eval/experiments/clustering_experiments.py:E402,T201",
    "tsml_eval/experiments/threaded_clustering_experiments.py:T201",
    "tsml_eval/experiments/forecasting_experiments.py:E402,T201",
    "tsml_eval/experiments/threaded_forecasting_experiments.py:T201",
    "tsml_eval/publications/*:E402,T201",
]

[tool.pytest.ini_options]
testpaths = "tsml_eval"
addopts = '''
    --ignore tsml_eval/_wip
    --ignore tsml_eval/publications/2023
    --durations 20
    --timeout 600
    --showlocals
    --doctest-modules
    --numprocesses auto
    --meminterval 0.1
'''
